--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_BASE_API_URL=https://genaiadmin.sdsstaging.co.uk/api
+REACT_APP_URL=https://genaigurudev.sdsstaging.co.uk
+# REACT_APP_URL=http://localhost:3000
