issues 2 done with content page

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_BASE_API_URL=https://genaiadmindev.sdsstaging.co.uk/api
 REACT_APP_URL=https://genaigurudev.sdsstaging.co.uk
-# REACT_APP_URL=http://localhost:3000
+REACT_APP_CHAT_GPT_API_KEY="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"
