--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_BASE_API_URL=https://genaiadmindev.sdsstaging.co.uk/api
 REACT_APP_URL=https://genaigurudev.sdsstaging.co.uk
-REACT_APP_CHAT_GPT_API_KEY="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"
+# REACT_APP_CHAT_GPT_API_KEY="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"
+REACT_APP_CHAT_GPT_API_KEY="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"
