--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-facebook-login": "^4.1.1",
+    "react-modal": "^3.16.1",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-social": "^1.10.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
