--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-share": "^5.0.3",
     "react-slick": "^0.29.0",
     "react-social": "^1.10.0",
     "react-toastify": "^9.1.3",
