--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-share": "^5.0.3",
     "react-slick": "^0.29.0",
     "react-social": "^1.10.0",
