--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-facebook-login": "^4.1.1",
     "react-modal": "^3.16.1",
     "react-player": "^2.13.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
